[project]
name = "HiEvNet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.9.3",
    "numcodecs<0.13.0",
    "numpy>=1.26.4",
    "opencv-python>=4.9.0.80",
    "openslide-bin>=4.0.0.11",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=11.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "snakemake>=9.16.3",
    "tiatoolbox>=1.6.0",
]

[tool.ruff]
# 1. Expand line length for deep learning syntax
line-length = 120
src = ["."]
target-version = "py311"
extend-exclude = ["*.interactive", "*.ipynb"]

[tool.ruff.lint]
# 2. Add professional code quality rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade (modernize syntax)
    "D",   # pydocstyle (enforce docstrings)
    "SIM", # flake8-simplify (cleaner logic)
    "N",   # pep8-naming (variable naming)
]

# 3. Ignore overly pedantic docstring rules
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]

[tool.ruff.format]
# 4. Mimic Ultralytics formatting style
quote-style = "single"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["hievnet"]

section-order = [
    "future", 
    "standard-library", 
    "third-party", 
    "first-party", 
    "local-folder"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["hievnet*"]
